<resources>
    <string name="app_name">Ticket to Ride</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="url_incorrect_format">Must be a valid URL</string>
    <string name="server_host">Server Host</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="password_incorrect_format">Invalid Password</string>
    <string name="username_incorrect_format">Invalid Username</string>
    <string name="login_success">Login Success</string>
    <string name="login_failed">Login Failed</string>
    <string name="register_failed">Register Failed</string>
    <string name="register_success">Register Success</string>
    <string name="player_count_list">\u0020/ 5 Players</string>
    <string name="start_game">Start Game</string>
    <string name="game_list_screen_title">Game List</string>
    <string name="game_started">The game has started!</string>
    <string name="game_join_error">Cannot Join Game</string>
    <string name="start_game_error">Cannot Start Game</string>
    <string name="map_desc">Game Board Map</string>
    <string name="chat_button">Chat Button</string>
    <string name="players_button">Players Button</string>
    <string name="dest_cards_button">Destination Cards Button</string>
    <string name="compose_chat_message">Compose Chat</string>
    <string name="send">Send</string>
    <string name="title_activity_dest_card">DestCardActivity</string>
    <string name="dest_card_draw_button">Draw</string>
    <string name="route_indicator">Route Indicator</string>
    <string name="destCardQuit">Confirm</string>
    <string name="returnDestCardButton">Return</string>
    <string name="cityTo">to</string>
    <string name="claim_success">Route Claimed!</string>
    <string name="title_activity_player_list">PlayerListActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="failed_to_claim_route">Failed To Claim Route</string>
    <string name="not_enough_cards_to_claim">Not Enough Cards</string>
    <string name="route_owned_by_another_player">Owned By Another Player</string>

    <!-- Strings related to result view -->
    <string name="result">RESULT</string>
    <string name="winner">WINNING PLAYER:</string>
    <string name="player">PLAYER</string>
    <string name="player1">Player 1:</string>
    <string name="player2">Player 2:</string>
    <string name="player3">Player 3:</string>
    <string name="player4">Player 4:</string>
    <string name="player5">Player 5:</string>
    <string name="total_score">TOTAL</string>i
    <string name="train_score">TRAINS</string>
    <string name="ticket_score">TICKETS</string>
    <string name="neg_ticket_score">NEG TICKETS</string>
    <string name="long_train">LONG TRAIN</string>
    <string name="unable_to_draw">Unable to draw train card</string>
    <string name="place_holder">-</string>
</resources>
